# ember

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml  ember.example.toml  index.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release-chart.yml  release.yml
bench/: README.md  bench-all.sh  bench-datatypes.sh  bench-encryption.sh  bench-grpc.py  bench-grpc.sh  bench-memory.sh  bench-memtier.sh  bench-proto.py  bench-proto.sh  bench-pubsub.py  bench-pubsub.sh  bench-stress.sh  bench-vector.py  bench-vector.sh  bench.sh  compare-redis.sh  setup-vm-vector.sh  setup-vm.sh
bench/proto/: user.proto
bench/results/: 20260212-184126-gcp-c2s8.csv  20260212-184406-gcp-c2s8-memtier.csv
bench/vector_data/: .gitignore  download_sift.sh  sift_loader.py
clients/ember-go/: Makefile  README.md  ember.go  ember_test.go  go.mod
clients/ember-go/proto/ember/v1/: ember.pb.go  ember_grpc.pb.go
clients/ember-py/: Makefile  README.md  pyproject.toml
clients/ember-py/ember/: __init__.py  client.py
clients/ember-py/ember/proto/ember/v1/: ember_pb2.py  ember_pb2_grpc.py
clients/ember-py/tests/: test_client.py
clients/ember-ts/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
clients/ember-ts/proto/ember/v1/: ember.proto
clients/ember-ts/src/: client.ts  index.ts  types.ts
crates/: README.md
crates/ember-cli/: Cargo.toml  README.md
crates/ember-cli/src/: batch.rs  bench_conn.rs  benchmark.rs  cluster.rs  commands.rs  connection.rs  format.rs  main.rs  repl.rs  tls.rs  watch.rs
crates/ember-client/: Cargo.toml  README.md
crates/ember-client/src/: commands.rs  connection.rs  lib.rs  pipeline.rs  subscriber.rs  tls.rs  vector.rs
crates/ember-cluster/: Cargo.toml  README.md
crates/ember-cluster/src/: auth.rs  election.rs  error.rs  gossip.rs  lib.rs  message.rs  migration.rs  raft.rs  raft_log.rs  raft_transport.rs  slots.rs  topology.rs
crates/ember-core/: Cargo.toml  README.md
crates/ember-core/benches/: concurrent.rs  engine.rs  keyspace.rs
crates/ember-core/src/: concurrent.rs  dropper.rs  engine.rs  error.rs  expiry.rs  keyspace.rs  lib.rs  memory.rs  schema.rs  shard.rs  time.rs
crates/ember-core/src/keyspace/: bitmap.rs  hash.rs  list.rs  mod.rs  proto.rs  set.rs  string.rs  vector.rs  zset.rs
crates/ember-core/src/shard/: aof.rs  blocking.rs  mod.rs  persistence.rs
crates/ember-core/src/types/: hash.rs  mod.rs  sorted_set.rs  vector.rs
crates/ember-persistence/: Cargo.toml  README.md
crates/ember-persistence/src/: aof.rs  encryption.rs  format.rs  lib.rs  recovery.rs  snapshot.rs
crates/ember-protocol/: Cargo.toml  README.md
crates/ember-protocol/benches/: protocol.rs
crates/ember-protocol/src/: command.rs  error.rs  lib.rs  parse.rs  serialize.rs  types.rs
crates/ember-protocol/src/command/: attributes.rs  mod.rs  parse.rs  table.rs  tests.rs
crates/ember-server/: Cargo.toml  README.md  build.rs
crates/ember-server/src/: acl.rs  cluster.rs  concurrent_handler.rs  config.rs  connection.rs  connection_common.rs  grpc.rs  keyspace_notifications.rs  main.rs  metrics.rs  pubsub.rs  replication.rs  server.rs  slowlog.rs  tls.rs
crates/ember-server/src/connection/: dispatch.rs  execute.rs  handler.rs  mod.rs  response.rs
crates/ember-server/src/connection/exec/: acl.rs  cluster.rs  hashes.rs  keyspace.rs  lists.rs  mod.rs  protobuf.rs  pubsub.rs  server.rs  sets.rs  sorted_sets.rs  strings.rs  vector.rs
docs/: clients.md  compatibility.md  migration-from-redis.md  performance-tuning.md  production-checklist.md  troubleshooting.md
examples/: README.md
examples/event-router/: README.md  consumer.py  producer.py
examples/live-leaderboard/: README.md  go.mod  main.go
examples/protobuf-profiles/: README.md  generate.py  main.py  requirements.txt  user_profile.proto
examples/semantic-search/: README.md  main.py  requirements.txt
helm/ember/: Chart.yaml  README.md  values.yaml
helm/ember/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
paper/: ember-whitepaper.tex
proto/ember/v1/: ember.proto
scripts/: README.md  bench-quick.sh  dev-cluster.sh  install.sh
tests/integration/: Cargo.toml
tests/integration/src/: auth.rs  basic_operations.rs  bitmap.rs  cli.rs  client_typed_api.rs  cluster.rs  data_types.rs  helpers.rs  main.rs  persistence.rs  proto.rs  pubsub.rs  tls.rs
