[workspace]
members = [
    "crates/ember-server",
    "crates/ember-core",
    "crates/ember-protocol",
    "crates/ember-persistence",
    "crates/ember-cluster",
    "crates/ember-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/kacy/ember"
keywords = ["cache", "redis", "key-value", "database", "distributed"]
categories = ["caching", "database-implementations"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# zero-copy buffers
bytes = "1"

# error handling
thiserror = "2"

# randomness (used for sampling in expiration and eviction)
rand = "0.9"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cli
clap = { version = "4", features = ["derive"] }

# checksums
crc32fast = "1"

# float ordering (used for sorted set scores)
ordered-float = "5"

# metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

# benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# tls
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"

# internal crates (version required for crates.io publishing)
emberkv-core = { version = "0.3.1", path = "crates/ember-core" }
ember-protocol = { version = "0.3.1", path = "crates/ember-protocol" }
ember-persistence = { version = "0.3.1", path = "crates/ember-persistence" }
ember-cluster = { version = "0.3.1", path = "crates/ember-cluster" }
