[workspace]
members = [
    "crates/ember-server",
    "crates/ember-core",
    "crates/ember-protocol",
    "crates/ember-persistence",
    "crates/ember-cluster",
    "crates/ember-cli",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.4.5"
edition = "2021"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/kacy/ember"
keywords = ["cache", "redis", "key-value", "database", "distributed"]
categories = ["caching", "database-implementations"]

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# zero-copy buffers
bytes = "1"

# error handling
thiserror = "2"

# randomness (used for sampling in expiration and eviction)
rand = "0.9"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cli
clap = { version = "4", features = ["derive"] }

# compact inline strings (SSO for keys ≤24 bytes)
compact_str = "0.8"

# checksums
crc32fast = "1"

# constant-time comparison (auth)
subtle = "2"

# float ordering (used for sorted set scores)
ordered-float = "5"

# metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

# benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# tls
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
rustls-native-certs = "0.8"

# dynamic protobuf messages
prost-reflect = "0.16"

# HNSW vector similarity search
usearch = "2.23"

# SO_REUSEPORT socket setup for thread-per-core
socket2 = { version = "0.5", features = ["all"] }

# grpc
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
tokio-stream = "0.1"

# internal crates (version required for crates.io publishing)
emberkv-core = { version = "0.4.5", path = "crates/ember-core" }
ember-protocol = { version = "0.4.5", path = "crates/ember-protocol" }
ember-persistence = { version = "0.4.5", path = "crates/ember-persistence" }
ember-cluster = { version = "0.4.5", path = "crates/ember-cluster" }
