[package]
name = "emberkv-cli"
description = "Interactive CLI tool for ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "ember-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
