[package]
name = "ember-cluster"
description = "Distributed clustering for ember: raft, gossip, slot management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
openraft = { version = "0.9", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
