[package]
name = "emberkv-core"
description = "Core engine for ember: keyspace, data types, sharding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ember_core"

[dependencies]
ember-protocol = { workspace = true }
ember-persistence = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
tempfile = "3"
