[package]
name = "emberkv-core"
description = "Core engine for ember: keyspace, data types, sharding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
encryption = ["ember-persistence/encryption"]
protobuf = ["prost-reflect"]

[lib]
name = "ember_core"

[dependencies]
ember-cluster = { workspace = true }
ember-protocol = { workspace = true }
ember-persistence = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
ordered-float = { workspace = true }
prost-reflect = { workspace = true, optional = true }
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "keyspace"
harness = false

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "concurrent"
harness = false
