[package]
name = "ember-persistence"
description = "AOF and snapshot durability for ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
