[package]
name = "ember-protocol"
description = "RESP3 wire protocol parser and serializer for ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
bytes = { workspace = true }
itoa = "1"
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "protocol"
harness = false
