[package]
name = "ember-server"
description = "Main server binary for ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]

[dependencies]
bytes = { workspace = true }
emberkv-core = { workspace = true }
ember-protocol = { workspace = true }
ember-persistence = { workspace = true }
ember-cluster = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
futures = "0.3"
dashmap = "6"

# tls
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# optional: better multi-threaded allocation performance
tikv-jemallocator = { version = "0.6", optional = true }
