[package]
name = "ember-server"
description = "Main server binary for ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
encryption = ["emberkv-core/encryption", "ember-persistence/encryption"]
protobuf = ["emberkv-core/protobuf", "ember-persistence/protobuf"]
vector = ["emberkv-core/vector", "ember-persistence/vector"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build", "dep:tokio-stream"]

[dependencies]
bytes = { workspace = true }
emberkv-core = { workspace = true }
ember-protocol = { workspace = true }
ember-persistence = { workspace = true }
ember-cluster = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
dashmap = "6"
subtle = { workspace = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# tls
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }

# grpc (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# optional: better multi-threaded allocation performance
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = { workspace = true, optional = true }
